S12P31A206-11 refactor: toDto -> Mapper로 분리