@@ -4,13 +4,15 @@ import lombok.RequiredArgsConstructor;
 import org.example.backend.controller.request.project.ProjectCreateRequest;
 import org.example.backend.controller.response.project.ProjectResponse;
 import org.example.backend.domain.project.entity.Project;
+import org.example.backend.domain.project.mapper.ProjectMapper;
 import org.example.backend.domain.project.repository.ProjectRepository;
 import org.example.backend.global.exception.BusinessException;
 import org.example.backend.global.exception.ErrorCode;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static org.example.backend.domain.project.mapper.ProjectMapper.toResponse;
 
 @Service
 @RequiredArgsConstructor
@@ -22,21 +24,21 @@ public class ProjectServiceImpl implements ProjectService {
     public ProjectResponse createProject(ProjectCreateRequest request) {
         Project project = Project.create(request.getProjectName());
         Project saved = projectRepository.save(project);
-        return toDto(saved);
+        return toResponse(saved);
     }
 
     @Override
     public ProjectResponse getProject(Long id) {
         Project project = projectRepository.findById(id)
                 .orElseThrow(() -> new BusinessException(ErrorCode.PROJECT_NOT_FOUND));
-        return toDto(project);
+        return toResponse(project);
     }
 
     @Override
     public List<ProjectResponse> getAllProjects() {
         return projectRepository.findAll().stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
+                .map(ProjectMapper::toResponse)
+                .toList();
     }
 
     @Override
@@ -46,11 +48,4 @@ public class ProjectServiceImpl implements ProjectService {
         projectRepository.delete(project);
     }
 
-    private ProjectResponse toDto(Project project) {
-        return ProjectResponse.from(
-                project.getId(),
-                project.getProjectName(),
-                project.getCreatedAt()
-        );
-    }
 }
